2014-09-29  Roger Fong  <roger_fong@apple.com>

        [Windows] Skip a javascriptcore test following r174036.

        * Scripts/run-javascriptcore-tests:

2014-09-29  Roger Fong  <roger_fong@apple.com>

        [Windows] Reduce number of processes used by NRWT on Windows to 1.

        * Scripts/webkitpy/port/win.py:
        (WinPort.default_child_processes):
        Reduce number of processes to 1 so we can get a good baseline for what failures
        we should be expecting to see from the Windows bots.

2014-09-29  Darin Adler  <darin@apple.com>

        Tweak and tighten SVG font converter
        https://bugs.webkit.org/show_bug.cgi?id=136956

        Reviewed by Myles Maxfield.

        I was investigating behavior of String::toInt, String::toDouble, and
        String::toFloat for various failure cases, and decided to start some
        unit tests for those functions here.

        * TestWebKitAPI/Tests/WTF/WTFString.cpp:
        (TestWebKitAPI::TEST): Addded a first small bit of StringToInt and
        StringToDouble testing.

2014-09-29  Philippe Normand  <pnormand@igalia.com>

        [GTK][CMake] TestWebCore target build sometimes fail
        https://bugs.webkit.org/show_bug.cgi?id=137207

        Reviewed by Csaba Osztrogon.

        * TestWebKitAPI/PlatformGTK.cmake: Make sure the forwarding
        headers are generated before the TestWebCore target is built.

2014-09-29  Carlos Garcia Campos  <cgarcia@igalia.com>

        [GTK] Remove IntPointGtk.cpp and IntRectGtk.cpp
        https://bugs.webkit.org/show_bug.cgi?id=137209

        Reviewed by Philippe Normand.

        * TestWebKitAPI/PlatformGTK.cmake: Remove unneeded IntRectGtk.cpp
        from the WebCore test sources.

2014-09-28  Myles C. Maxfield  <mmaxfield@apple.com>

        Allow webkit-patch upload to respect the --directory argument with git checkouts
        https://bugs.webkit.org/show_bug.cgi?id=137166

        Reviewed by Darin Adler.

        We simply hadn't plumbed it through.