@@ -3072,6 +3072,11 @@
             "hixie"
          ]
       },
+      "Jake Nielsen" : {
+         "emails" : [
+            "jake.nielsen.webkit@gmail.com"
+         ]
+      },
       "Jeff Timanus" : {
          "emails" : [
             "twiz@chromium.org",
